--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </aside>
 
         <article>
-            <img src="../../components/images/istockphoto-1324470855-612x612.jpg" alt="Bee"/>
+            <img src="components/images/istockphoto-1324470855-612x612.jpg" alt="Bee"/>
         </article>
 
 
