commit changes, image effect, media update and icons and favicon
commit changes, image effect, media update and icons and favicon

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="./styles/style.css"/>
     <link rel="stylesheet" href="./styles/fonts.css"/>
     <link rel="stylesheet" href="./styles/media.css"/>
+    <link rel="icon" type="image/x-icon" href="./components/images/favicon.ico"/>
     <title>BeeLinks</title>
 </head>
 <body>
@@ -15,19 +17,17 @@
             <h1>Links</h1>
         </div>
         <ul>
-            <a href="#"><li>Ínicio</li></a>
-            <a href="#"><li>Serviços</li></a>
-            <a href="#"><li>Sobre</li></a>
-            <a href="#"><li>Contato</li></a>
-            <a href="#" id="inscrito-btn"><li>Já tenho uma conta</li></a>
+            <a href="#"><li><i class="fas fa-home"></i> Ínicio</li></a>
+            <a href="#"><li><i class="fas fa-concierge-bell"></i> Serviços</li></a>
+            <a href="#"><li><i class="fas fa-info-circle"></i> Sobre</li></a>
+            <a href="#"><li><i class="fas fa-envelope"></i> Contato</li></a>
+            <a href="#" id="inscrito-btn"><li><i class="fas fa-user-check"></i> Já tenho uma conta</li></a>
         </ul>
-
-
     </header>
     <main>
         <aside>
             <h2>Venha para a <span>BeeLinks!</span></h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum aliquam ratione accusamus consectetur ipsam? Praesentium autem voluptatum sapiente id quae!</p>
+            <p> Nosso propósito é organizar suas redes sociais e dados mais importantes em um só lugar! Imagina só, com apenas um link, você conseguir organizar todos os seus dados de contatos mais importantes, portifólio, currículo, imagina a praticidade disso não é mesmo? </p>
             <form>
                 <input type="email" placeholder="E-mail">
                 <input type="password" placeholder="Senha">
@@ -38,19 +38,7 @@
         <article>
             <img src="components/images/istockphoto-1324470855-612x612.jpg" alt="Bee"/>
         </article>
-
-
     </main>
-
-
-
-
-
-
-
-
-
-
 
     
 </body>
