--- a/index.html
+++ b/index.html
@@ -36,10 +36,8 @@
         </aside>
 
         <article>
-            <img src="components/images/istockphoto-1324470855-612x612.jpg" alt="Bee"/>
+            <img src="components/images/giphy.gif" alt="Bee"/>
         </article>
     </main>
-
-    
 </body>
 </html>
