changes and new things

--- a/index.html
+++ b/index.html
@@ -25,19 +25,37 @@
         </ul>
     </header>
     <main>
-        <aside>
-            <h2>Venha para a <span>BeeLinks!</span></h2>
-            <p> Nosso propósito é organizar suas redes sociais e dados mais importantes em um só lugar! Imagina só, com apenas um link, você conseguir organizar todos os seus dados de contatos mais importantes, portifólio, currículo, imagina a praticidade disso não é mesmo? </p>
-            <form>
-                <input type="email" placeholder="E-mail">
-                <input type="password" placeholder="Senha">
-                <input type="submit" value="Me Inscrever">
-            </form>
-        </aside>
+        <div class="content-wrapper">
+            <aside>
+                <h2>Venha para a <span>BeeLinks!</span></h2>
+                <p> Nosso propósito é organizar suas redes sociais e dados mais importantes em um só lugar! Imagina só, com apenas um link, você conseguir organizar todos os seus dados de contatos mais importantes, portifólio, currículo, imagina a praticidade disso não é mesmo? </p>
+                <form>
+                    <input type="email" placeholder="E-mail">
+                    <input type="password" placeholder="Senha">
+                    <input type="submit" value="Me Inscrever">
+                </form>
+            </aside>
 
-        <article>
-            <img src="components/images/giphy.gif" alt="Bee"/>
-        </article>
+            <article>
+                <img src="components/images/giphy.gif" alt="Bee"/>
+            </article>
+        </div>
+
+        <!-- Nova div adicionada aqui -->
+        <div class="preview-section">
+            <div class="preview-image">
+                <img src="components/images/preview.jpg" alt="Preview" class="rounded-image"/>
+            </div>
+            <div class="preview-text">
+                <h2>Não perca essa oportunidade!</h2>
+                <p class="social-icons">
+                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a> <!-- Instagram -->
+                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a> <!-- Facebook -->
+                    <a href="#" target="_blank"><i class="fab fa-github"></i></a> <!-- GitHub -->
+                    <a href="#" target="_blank"><i class="fab fa-youtube"></i></a> <!-- YouTube -->
+                </p>
+            </div>
+        </div>
     </main>
 </body>
 </html>
