--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
             </article>
         </div>
 
-        <!-- Nova div adicionada aqui -->
         <div class="preview-section">
             <div class="preview-image">
                 <img src="components/images/preview.jpg" alt="Preview" class="rounded-image"/>
             </div>
             <div class="preview-text">
-                <h2>Não perca essa oportunidade!</h2>
+                <h2>Não perca esta oportunidade!</h2>
                 <p class="social-icons">
                     <a href="#" target="_blank"><i class="fab fa-instagram"></i></a> <!-- Instagram -->
                     <a href="#" target="_blank"><i class="fab fa-facebook"></i></a> <!-- Facebook -->
